[gd_scene load_steps=29 format=3 uid="uid://ll1i7ubcwyix"]

[ext_resource type="Script" path="res://script/player.gd" id="1_gkfvj"]
[ext_resource type="Texture2D" uid="uid://d0quuxwa871mn" path="res://asset/player/defalut.png" id="2_x1dki"]
[ext_resource type="Texture2D" uid="uid://2vrt50jiljkl" path="res://asset/player/fertilizer/f0.png" id="3_7nimy"]
[ext_resource type="Texture2D" uid="uid://wjyt4j17qpop" path="res://asset/player/Harvest/F0.png" id="3_ak38w"]
[ext_resource type="Texture2D" uid="uid://dyqjve0clnp2b" path="res://asset/player/walk/walk1.png" id="3_yt45t"]
[ext_resource type="Texture2D" uid="uid://c71qopnj5ki21" path="res://asset/player/fertilizer/f1.png" id="4_0ctbs"]
[ext_resource type="Texture2D" uid="uid://bf31gny64x16i" path="res://asset/player/Harvest/F1.png" id="4_q13sy"]
[ext_resource type="Texture2D" uid="uid://bge7ej5sohf1p" path="res://asset/player/walk/walk3.png" id="4_qp6uh"]
[ext_resource type="Texture2D" uid="uid://bxr1ksme3xsp2" path="res://asset/player/fertilizer/f2.png" id="5_a5fga"]
[ext_resource type="Texture2D" uid="uid://wab16qouac6v" path="res://asset/player/seed/seed1.png" id="5_fyk88"]
[ext_resource type="Texture2D" uid="uid://q5qwjndejkrs" path="res://asset/player/Harvest/F2.png" id="5_kqac0"]
[ext_resource type="Texture2D" uid="uid://lxxjdhkfnfvb" path="res://asset/player/water/water1.png" id="5_qpe4j"]
[ext_resource type="Texture2D" uid="uid://ce10pd0f8egnt" path="res://asset/player/fertilizer/f3.png" id="6_2t8yd"]
[ext_resource type="Texture2D" uid="uid://d01pwpv8gpnvh" path="res://asset/player/Harvest/F3.png" id="6_7qkc2"]
[ext_resource type="Texture2D" uid="uid://b0lovae5l2lhf" path="res://asset/player/water/water2.png" id="6_ggiy3"]
[ext_resource type="Texture2D" uid="uid://balv1b2cacwc2" path="res://asset/player/seed/seed2.png" id="6_o4o86"]
[ext_resource type="Texture2D" uid="uid://bh816p8wg7quh" path="res://asset/player/Harvest/F4.png" id="7_1ns6v"]
[ext_resource type="Texture2D" uid="uid://cc3nw203a3gxq" path="res://asset/player/water/water3.png" id="7_i62hh"]
[ext_resource type="Texture2D" uid="uid://dunwv52ly30qy" path="res://asset/player/fertilizer/f4.png" id="7_lc5wd"]
[ext_resource type="Texture2D" uid="uid://dtdlutwl31cho" path="res://asset/player/Harvest/F5.png" id="8_7t41n"]
[ext_resource type="Texture2D" uid="uid://csix41e63vj6o" path="res://asset/player/fertilizer/f5.png" id="8_hjroc"]
[ext_resource type="Texture2D" uid="uid://dadip4y674qgi" path="res://asset/player/Harvest/F6.png" id="9_o47n4"]
[ext_resource type="Texture2D" uid="uid://rrh60tyndcoy" path="res://asset/player/fertilizer/f6.png" id="9_rgi0u"]
[ext_resource type="Texture2D" uid="uid://bfgt2rgh8nhvt" path="res://asset/player/soil/soil1.png" id="14_j1l05"]
[ext_resource type="Texture2D" uid="uid://10r0lun4eucs" path="res://asset/player/soil/soil2.png" id="15_gcn8r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_isnnn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x1dki")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7nimy")
}, {
"duration": 1.0,
"texture": ExtResource("4_0ctbs")
}, {
"duration": 1.0,
"texture": ExtResource("5_a5fga")
}, {
"duration": 1.0,
"texture": ExtResource("6_2t8yd")
}, {
"duration": 1.0,
"texture": ExtResource("7_lc5wd")
}, {
"duration": 1.0,
"texture": ExtResource("8_hjroc")
}, {
"duration": 1.0,
"texture": ExtResource("9_rgi0u")
}],
"loop": true,
"name": &"fetilizer",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ak38w")
}, {
"duration": 1.0,
"texture": ExtResource("4_q13sy")
}, {
"duration": 1.0,
"texture": ExtResource("5_kqac0")
}, {
"duration": 1.0,
"texture": ExtResource("6_7qkc2")
}, {
"duration": 1.0,
"texture": ExtResource("7_1ns6v")
}, {
"duration": 1.0,
"texture": ExtResource("8_7t41n")
}, {
"duration": 1.0,
"texture": ExtResource("9_o47n4")
}],
"loop": false,
"name": &"harvest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x1dki")
}, {
"duration": 1.0,
"texture": ExtResource("3_yt45t")
}, {
"duration": 1.0,
"texture": ExtResource("2_x1dki")
}, {
"duration": 1.0,
"texture": ExtResource("4_qp6uh")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_fyk88")
}, {
"duration": 1.0,
"texture": ExtResource("6_o4o86")
}, {
"duration": 1.0,
"texture": ExtResource("6_o4o86")
}],
"loop": false,
"name": &"seed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_j1l05")
}, {
"duration": 1.0,
"texture": ExtResource("15_gcn8r")
}, {
"duration": 1.0,
"texture": ExtResource("14_j1l05")
}, {
"duration": 1.0,
"texture": ExtResource("15_gcn8r")
}, {
"duration": 1.0,
"texture": ExtResource("14_j1l05")
}, {
"duration": 1.0,
"texture": ExtResource("15_gcn8r")
}, {
"duration": 1.0,
"texture": ExtResource("14_j1l05")
}, {
"duration": 1.0,
"texture": ExtResource("15_gcn8r")
}],
"loop": false,
"name": &"soil",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_qpe4j")
}, {
"duration": 1.0,
"texture": ExtResource("6_ggiy3")
}, {
"duration": 1.0,
"texture": ExtResource("7_i62hh")
}, {
"duration": 1.0,
"texture": ExtResource("7_i62hh")
}],
"loop": false,
"name": &"water",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_110ga"]
size = Vector2(74, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1h455"]
size = Vector2(67, 17.5)

[node name="Player" type="CharacterBody2D"]
position = Vector2(479, 193)
script = ExtResource("1_gkfvj")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_isnnn")
animation = &"harvest"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_110ga")

[node name="feat_area" type="Area2D" parent="."]

[node name="feat_co" type="CollisionShape2D" parent="feat_area"]
position = Vector2(-1, 61)
shape = SubResource("RectangleShape2D_1h455")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="feat_area" to="." method="_on_feet_area_entered"]
[connection signal="area_exited" from="feat_area" to="." method="_on_feet_area_exited"]
